...
//MARK: Common
"Done" = "Done";
"No details available." = "No details available.";
"Not Available" = "Not Available";
"No information available" = "No information available";
"No title available" = "No title available";
"Up Coming" = "Up Coming";
"Upcoming Episodes" = "Upcoming Episodes";
"Arriving Soon" = "Arriving Soon";
"Latest Movies" = "Latest Movies";
"Latest Shows" = "Latest Shows";
"Upcoming Movies" = "Upcoming Movies";
"TV Show" = "TV Show";
"Movie" = "Movie";
"People" = "People";
"Popular Movies" = "Popular Movies";
...
"Unwatched" = "Unwatched";
"Watched" = "Watched";
"Upcoming Movies" = "Upcoming Movies";
"Upcoming Seasons" = "Upcoming Seasons";
"Renewed Series" = "Renewed Series";
"Releasing Soon" = "Releasing Soon";
"Recently Released" = "Recently Released";
"Remove" = "Remove";
"Added to watchlist" = "Added to Watchlist";
"Mark as" = "Mark as";
"Add to Favorites" = "Add to Favorites";
"Share" = "Share";
"Mark this and previous episodes as watched" = "Mark this and previous episodes as watched";
...
"Remove Selected" = "Remove Selected";
"Mark selected as watched" = "Mark selected as watched";
"Mark selected as unwatched" = "Mark selected as unwatched";
"Open in" = "Open in";
"IMDb" = "IMDb";
"TMDb" = "TMDb";
"Coming Soon To Theaters" = "Coming Soon To Theaters";
"Pins" = "Pins";
"Email (optional)" = "Email (optional)";
"Open in YouTube" = "Open in YouTube";
"List Filters" = "List Filters";
"Add to List" = "Add to List";
"Remove from List" = "Remove from List";
...
"markedAsWatched" = "Marked as Watched";
"removedFromWatched" = "Removed from Watched";
"markedAsFavorite" = "Marked as Favorite";
"removedFromFavorites" = "Removed from Favorites";

//MARK: AttributionView.swift
"This product uses the TMDb API but is not endorsed or certified by TMDb." = "This product uses the TMDb API but is not endorsed or certified by TMDb.";

//MARK: ContentDetailsView.swift
"Add to watchlist" = "Add to Watchlist";
"Remove from watchlist" = "Remove from Watchlist";
"About" = "About";
"Trailers" = "Trailers";
...
"Genre" = "Genre";
"Region of Origin" = "Region of Origin";
"Production Company" = "Production Company";
"Information" = "Information";

//MARK: ContentView.swift
"Home" = "Home";
"Watchlist" = "Watchlist";
"Search" = "Search";
"Cronica" = "Cronica";

//MARK: SettingsView.swift
"Support" = "Support";
...
"Update Items" = "Update Items";
"'Update Items' will update your items with new information available on TMDb, if available." = "'Update Items' will update your items with new information available on TMDb, if available.";
"Privacy" = "Privacy";
"Open Trailers in YouTube App" = "Open Trailers in YouTube App";

//MARK: HomeView.swift
"Trending" = "Trending";
"This week" = "This week";
"Today" = "Today";
"My Pins" = "My Pins";
"Your pinned items" = "Your pinned items";
"Remove Pin" = "Remove Pin";

//MARK: WatchlistSectionView.swift
"Coming Soon" = "Coming Soon";
...
