...
                }
                
                Section {
                    Button("Delete", role: .destructive) {
                        askConfirmationForDeletion = true
                    }
                    .accessibilityIdentifier("DeleteListButton")
                    .foregroundColor(.red)
#if os(macOS)
                    .buttonStyle(.link)
#endif
                }
                .confirmationDialog("Are You Sure?",
...
                        let itemsToDelete = list.itemsArray
                        PersistenceController.shared.delete(list)
                        for item in itemsToDelete {
                            PersistenceController.shared.delete(item)
                        }
                    }
                    .accessibilityIdentifier("ConfirmDeleteButton")
                }
            }
        }
#if os(macOS)
        .formStyle(.grouped)
#endif
...
