...
                                    deleteButton
                                }
                                .swipeActions(edge: .trailing, allowsFullSwipe: SettingsStore.shared.allowFullSwipe) {
                                    NavigationLink {
                                        EditCustomList(list: item, showListSelection: $showListSelection)
                                    } label: {
                                        Label("Edit", systemImage: "pencil")
                                    }
                                    
                                }
                        }
                    }
                }
...
                EmptyView()
            } else {
                checkStage
            }
#endif
            VStack(alignment: .leading) {
                Text("Watchlist")
                Text("Default List")
                    .font(.caption)
                    .foregroundColor(.secondary)
            }
        }
    }
...
